<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">


        <TextView
        android:id="@+id/sony_text_view"
        style="@style/PrimareStyleForTextView"
        android:background="#FFE082"
        android:text="@string/sony"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

        <TextView
        android:id="@+id/samsung_text_view"
        style="@style/PrimareStyleForTextView"
        android:background="#C5E1A5"
        android:text="@string/samsung"
        app:layout_constraintTop_toBottomOf="@+id/sony_text_view"
        tools:ignore="MissingConstraints" />

        <TextView
        android:id="@+id/apple_text_view"
        style="@style/PrimareStyleForTextView"
        android:background="#90CAF9"
        android:text="@string/apple"
        app:layout_constraintTop_toBottomOf="@+id/samsung_text_view"
        tools:ignore="MissingConstraints" />

        <TextView
        android:id="@+id/microsoft_text_view"
        style="@style/PrimareStyleForTextView"
        android:background="#FFCE93D8"
        android:text="@string/microsoft"
        app:layout_constraintTop_toBottomOf="@+id/apple_text_view"
        tools:ignore="MissingConstraints" />

        <Button
        android:id="@+id/detail_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/microsoft_text_view"
        android:layout_marginTop="80dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="40dp"
        android:text="@string/description"
        android:textColor="@color/white"
        android:backgroundTint="#4DB6AC"/>


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appProjectBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/app_project_toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Наши девизы"
            app:titleCentered="true"
            app:titleTextColor="@color/white"
             />

    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/author_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/full_description"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="RtlSymmetry" />



</androidx.constraintlayout.widget.ConstraintLayout>