<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <com.google.android.material.appbar.AppBarLayout

        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/app_toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Проекты"
            app:titleTextColor="@color/white"
            app:titleCentered="true"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/pr1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        android:text="@string/project10"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pr2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/project20"
        app:layout_constraintTop_toBottomOf="@+id/pr1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pr3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/project30"
        app:layout_constraintTop_toBottomOf="@+id/pr2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pr4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/project40"
        app:layout_constraintTop_toBottomOf="@+id/pr3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pr5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/project50"
        app:layout_constraintTop_toBottomOf="@+id/pr4"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>




